// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrayToObject 1`] = `
{
  "2": {
    "name": "def",
  },
  "5": {
    "value": "abc",
  },
}
`;

exports[`arrayToObject: keep keys 1`] = `
{
  "2": {
    "id": 2,
    "name": "def",
  },
  "5": {
    "id": 5,
    "value": "abc",
  },
}
`;

exports[`deleteKey 1`] = `
{
  "a": {
    "id": 5,
  },
  "b": {
    "c": {
      "name": "def",
    },
  },
}
`;

exports[`getKey 1`] = `5`;

exports[`merge deep 1`] = `
{
  "a": 1,
  "b": 2,
  "c": {
    "x": 1,
    "y": 2,
    "z": 2,
  },
  "d": [
    1,
    2,
  ],
  "e": 2,
}
`;

exports[`moveKey 1`] = `
{
  "b": {
    "c": {
      "a": {
        "id": 5,
      },
      "name": "def",
    },
  },
}
`;

exports[`objectToArray 1`] = `
[
  {
    "id": 5,
    "identifier": "a",
  },
  {
    "identifier": "b",
    "name": "def",
  },
]
`;

exports[`remove empty keys 1`] = `
{
  "c": 2,
}
`;

exports[`sort JSON array 1`] = `
[
  6,
  1,
  3,
]
`;

exports[`sort JSON object 1`] = `
{
  "k": [
    6,
    1,
    3,
  ],
  "y": {
    "a": "abc",
    "c": 5,
    "inception": 1880-02-01T23:06:32.000Z,
  },
  "z": 2,
}
`;
